add version to readme; bump version in readme when npm publish

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "README.md"
   ],
   "scripts": {
+    "version": "scripts/bump-version-in-readme.sh",
     "test": "jest"
   },
   "repository": {
